--- a/index.html
+++ b/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="description" content="Guitar kings, Best guitars in the world">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta
+      name="description"
+      content="Guitar kings, Best guitars in the world"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GuitarKings</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-  <header>
-      <span>Guitar Kings</span>
-      <nav>
-        <ul> 
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="my-header">
+     <div class="inner">
+     <span class="logo">Guitar Kings</span>
+      <nav class="navigation">
+        <ul>
           <li>
-            <a href="#"> Home </a>
+            <a href="/">Home</a>
           </li>
           <li>
-            <a href="#"> Guitars </a>
+            <a href="guitars.html">Guitars</a>
           </li>
           <li>
-            <a href="#"> Contact </a>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li>
+            <a href="about.html"> About</a>
           </li>
         </ul>
       </nav>
-  </header>  
-  <section>
-      Herobanner
-  </section>
-  <section>
-      Our Guitars Are:
-  </section>
-  <section>
-      Reviews
-  </section>
-  <section>
-      View Our Guitars     
-  </section>
+    </div>
+    </header>
+    <section class="hero-banner">
+      <div class="inner">
+      <h1>Authentic Handmade Guitars</h1>
+      <button class="hero-cta"><a href="#">View guitars</a></button>
+      </div>
+    </section>
+    <section class="our-guitar">
+      <div class="inner">
+       <div class="our-guitar-collum">
+         <div class="og-colloum-right">
+           <h2>Our Guitars Are:</h2>
+           <ul>
+             <li>Made with real Pennsylvanian wood </li>
+             <li>Crafted by a family-run business</li>
+             <li>Built to last a lifetime </li>
+             <li>Beautiful unique sound </li>
+             <li>Options for all music lovers </li>
+           </ul>
+         </div>
+         <div class="pg-colloum-left"><img src="/img/guitar-2.png" alt="picture of a guitar"></div>
+      </div>
+      </div>
+    </section>
+     
+    <section class="reviews">
+      <div class="inner">
 
-  <footer>
-      &copy;Copyright 
-  </footer>
-</body>
+      </div>
+    </section>
+    <section class="view-our-guitars">
+      <div class="inner">
+
+      </div> 
+    </section>
+    <footer class="footer">
+      <div class="inner">
+        &copy;Copyright
+      </div>
+    </footer>
+    <script src="/js/script.js"></script>
+  </body>
 </html>
