--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GuitarKings</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
-  <body>
-    <header class="my-header">
+  <body id="home-page">
+    <header id="my-header" class="my-header">
      <div class="inner">
      <span class="logo">Guitar Kings</span>
       <nav class="navigation">
@@ -34,7 +35,7 @@
     <section class="hero-banner">
       <div class="inner">
       <h1>Authentic Handmade Guitars</h1>
-      <button class="hero-cta"><a href="#">View guitars</a></button>
+      <button class="hero-cta">View guitars</button>
       </div>
     </section>
     <section class="our-guitar">
